# UMD-course-projects

./: README.md
 dvs_eventvisualizer/: CMakeLists.txt  README.md  contributors.txt  package.xml
 dvs_eventvisualizer/include/event_visualizer/: event_visualizer.h
 dvs_eventvisualizer/src/: event_visualizer.cpp
Active_Segmentation/: README  README.md  edges4connected.m  fixation_segmentation.m  imRegionHighlight.m  main.m  maxflowmex.cpp  maxflowmex.mexw32  maxflowmex.mexw64
Active_Segmentation/Images/: 11_grad.mat  11_ori.mat  DSC01527_grad.mat  DSC01527_ori.mat
Active_Segmentation/html/: assignment_4_main.html  fixation_segmentation.html
Cerebellar-Motor-Articulation-Controller-master/: README.md  cmac.py  main.py
DVS-IMU-Stabilization/: README.md
DVS-IMU-Stabilization/stabilizer/: CMakeLists.txt  package.xml
DVS-IMU-Stabilization/stabilizer/include/stabilizer/: stabilizer.h
DVS-IMU-Stabilization/stabilizer/msg/: IMUtstamp.msg
DVS-IMU-Stabilization/stabilizer/src/: main.cpp  opencvtest.cpp
Image_Understanding_projects/project1/: LBP_feat_extract.m  lbp_svm.html  lbp_svm.ipynb
Kalman_IMU/: README.md  getIMUSamplesDavis.m  kalman_imu.m  kalman_sf.m  main.m  settings.m  view_data.m
Mysorebot- Robot_Modeling_Project/: README.md
Mysorebot- Robot_Modeling_Project/4_wheel_3_DOF_vehicle/: CART.slx  CART.xml  base1_prt.stl  base_manipulator_prt.stl  gripper1_prt.stl  gripper_base_prt.stl  gripper_prt.stl  hinge_prt.stl  inverse_kinematics.m  link1_body_prt.stl  link1_hinge_prt.stl  link2_body_prt.stl  link2_hinge_prt.stl  link3_prt.stl  wheel3_prt.stl
Mysorebot- Robot_Modeling_Project/6_wheel_6_DOF_vehicle/: base_manipulator_prt.stl  base_prt.stl  bb1_prt.stl  bb2_prt.stl  bb3_prt.stl  fb_prt.stl  gripper1_prt.stl  gripper_base_prt.stl  gripper_prt.stl  lb_prt.stl  link1_body_prt.stl  link1_hinge_prt.stl  link2_body_prt.stl  link2_hinge_prt.stl  link3_prt.stl  rover.slx  rover.slx.autosave  rover.xml  wheel.stl  wheel_prt.stl
Panoramic_Image_Stitching/: Panoramic_image_stitching.m  README  README.md  affine_transformation.m  challenging_problems.m  find_best_match.m  match.m  ransac.m  stitch.m  top100matches.m
RRT_Autonomous_Robot-master/: AddNode.m  Analysis.txt  DrawRectangle.m  README  RRTpathplanner.m  is_polygon_intersect.m  isintersect.m  obstacles.m  pathplanning_1D.m  pathplanning_2D.m  poly2poly.m
Texture_Synthesis/: FindMatches.m  GrowImage.m  README  README.md  getNeighbourhood.m  getUnfilledPixels.m  seed_image.m  texture_synthesize.m
Tic-Tac-Toe_Reinforcement_Learning/: DQN.py  Human_vs_QPlayer.py  QPlayer_training.py  README.md  board.py  memory.py  ttt_game.py
collision_avoidance_reinforcement_learning/: README.md  dqn.py
dvs_eventvisualizer/: README.md
